@@ -282,7 +282,7 @@ public class Java14
 		{
 			JEditTextArea textArea = (JEditTextArea)c;
 			if(action == MOVE)
-				textArea.setSelectedText(null);
+				textArea.setSelectedText(null,false);
 		}
 
 		public boolean canImport(JComponent c, DataFlavor[] flavors)
